# famiterm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
ext/: nesapu.pyx  nescpu.pyx  nesppu.pyx
famiterm/: nesapu.pyi  run.py
nesterm/: nescpu.pyi  nesppu.pyi  run.py  ssh.py
