[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.29.13",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true


[tool.cibuildwheel]
build = "cp*-win_amd64 cp*-manylinux_x86_64 cp*-macosx_x86_64"
skip = "cp36*"
test-command = "famiterm --help"

[tool.cibuildwheel.linux]
before-all = "yum install -y libsamplerate portaudio openssh-clients"
